[package]
name = "gdk-pixbuf"
license = "MIT"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["gdk-pixbuf", "gtk-rs", "gnome"]
readme = "README.md"
documentation = "http://gtk-rs.org/docs/gdk_pixbuf/"
version = "0.5.0"
description = "Rust bindings for the GdkPixbuf library"
repository = "https://github.com/gtk-rs/gdk-pixbuf"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/gdk-pixbuf", service = "github" }
travis-ci = { repository = "gtk-rs/gdk-pixbuf" }

[lib]
name = "gdk_pixbuf"

[features]
v2_28 = ["gdk-pixbuf-sys/v2_28"]
v2_30 = ["v2_28", "gdk-pixbuf-sys/v2_30"]
v2_32 = ["v2_30", "gdk-pixbuf-sys/v2_32"]
v2_36 = ["v2_32", "gdk-pixbuf-sys/v2_36"]
v2_36_8 = ["v2_36", "gdk-pixbuf-sys/v2_36_8"]
dox = ["glib/dox", "gdk-pixbuf-sys/dox"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
futures = ["futures-core-preview", "fragile", "glib/futures", "gio/futures"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1.3"
optional = true

[dependencies]
libc = "0.2"
gobject-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
glib = { git = "https://github.com/stinkstudios/glib", tag = "0.6.1", version = "0.6.1" }
glib-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
gdk-pixbuf-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
gio-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
gio = { git = "https://github.com/stinkstudios/gio", tag = "0.5.1", version = "0.5.1" }
fragile = { version = "0.3", optional = true }
futures-core-preview = { version = "0.2", optional = true }

[dev-dependencies]
gir-format-check = "^0.1"
